--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,6 +145,10 @@ small, .font_small {
           box-shadow:0 1px 2px rgba(0, 0, 0, .2);
 }
 
+.is-sticky .hvr-ripple-out:before {
+   border: none;
+}
+
 
 .hero-main {
   background:url(//res.cloudinary.com/dazemr1k4/image/upload/v1445928759/anzac/img/bgimg.jpg) no-repeat right center;
