--- a/views/menu.html
+++ b/views/menu.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Codrops" />
   <link rel="stylesheet" type="text/css" href="/css/demo.css" />
   <!-- menu styles -->
-  <link rel="stylesheet" type="text/css" href="/css/component.css" />
+  <link rel="stylesheet" type="text/css" href="/css/componentmenu.css" />
   <script src="/js/modernizr-custom.js"></script>
 </head>
 
