--- a/views/menu.html
+++ b/views/menu.html
@@ -114,6 +114,7 @@
   </div>
   <!-- /view -->
   <script src="/js/classie.js"></script>
+  <script src="/js/dummydata.js"></script>
   <script src="/js/menu.js"></script>
   <script>
   (function() {
@@ -123,7 +124,7 @@
         // initialBreadcrumb : 'all', // initial breadcrumb text
         backCtrl : false, // show back button
         // itemsDelayInterval : 60, // delay between each menu item sliding animation
-        onItemClick: false // callback: item that doesn´t have a submenu gets clicked - onItemClick([event], [inner HTML of the clicked item])
+        onItemClick: loadDummyData // callback: item that doesn´t have a submenu gets clicked - onItemClick([event], [inner HTML of the clicked item])
       });
 
     // mobile menu toggle
@@ -141,6 +142,21 @@
     function closeMenu() {
       classie.remove(menuEl, 'menu--open');
       openMenuCtrl.focus();
+    }
+
+    // simulate grid content loading
+    var gridWrapper = document.querySelector('.content');
+
+    function loadDummyData(ev, itemName) {
+      ev.preventDefault();
+
+      closeMenu();
+      gridWrapper.innerHTML = '';
+      classie.add(gridWrapper, 'content--loading');
+      setTimeout(function() {
+        classie.remove(gridWrapper, 'content--loading');
+        gridWrapper.innerHTML = '<ul class="products">' + dummyData[itemName] + '<ul>';
+      }, 700);
     }
   })();
   </script>
