--- a/views/menu.html
+++ b/views/menu.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/css/demo.css" />
   <!-- menu styles -->
   <link rel="stylesheet" type="text/css" href="/css/componentmenu.css" />
+  <script src="/js/jquery.min.js"></script>
   <script src="/js/modernizr-custom.js"></script>
 </head>
 
@@ -117,7 +118,7 @@
   <script src="/js/dummydata.js"></script>
   <script src="/js/menu.js"></script>
   <script>
-  (function() {
+  $(document).ready(function() {
     var menuEl = document.getElementById('ml-menu'),
       mlmenu = new MLMenu(menuEl, {
         // breadcrumbsCtrl : true, // show breadcrumbs
@@ -158,7 +159,7 @@
         gridWrapper.innerHTML = '<ul class="products">' + dummyData[itemName] + '<ul>';
       }, 700);
     }
-  })();
+  });
   </script>
 </body>
 
