--- a/views/includes/_header.html
+++ b/views/includes/_header.html
@@ -5,7 +5,7 @@
         <div class="col-sm-6 col-3"><a href="/"><img class="img-responsive d-none d-md-block" src="/img/logo.png"><img class="d-block d-md-none" src="/img/logo-small.png"></a></div>
         <div class="col-sm-6 col-9">
           <h4 class="action action--open hvr-ripple-out" aria-label="Open Menu"><img src="/img/menu-button.svg" width="30px"></h4>
-          <div id="ml-menu" class="menu menu--open">
+          <div id="ml-menu" class="menu">
             <span class="action action--close" aria-label="Close Menu"><i class="fa fa-close"></i></span>
             <!-- <h3>TEST</h3> -->
             <div class="menu__wrap">
