--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -5,7 +5,7 @@
 }
 
 .menu__wrap {
-  position:absolute;
+  position: absolute;
   top:5em;
   bottom:0;
   overflow:hidden;
@@ -13,18 +13,19 @@
 }
 
 .menu__level {
-  position:absolute;
+  position: relative;
   top:0;
   left:0;
   visibility:hidden;
   overflow:hidden;
   overflow-y:scroll;
   width:calc(100% + 50px);
-  height:100%;
+  height: 100vh;
   margin:0;
   padding:0;
   list-style-type:none;
   padding-bottom: 20px;
+  z-index: 9999;
 }
 
 .menu__level:focus {
