--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -5,11 +5,12 @@
 }
 
 .menu__wrap {
-  position: absolute;
+  position: relative;
   top:5em;
   bottom:0;
-  overflow:hidden;
+  /* overflow:hidden; */
   width:100%;
+  height: 100vh;
 }
 
 .menu__level {
