--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -17,7 +17,7 @@
   position: relative;
   top:0;
   left:0;
-  visibility:hidden;
+  /* visibility:hidden; */
   overflow:hidden;
   overflow-y:scroll;
   width:calc(100% + 50px);
@@ -27,6 +27,7 @@
   list-style-type:none;
   padding-bottom: 20px;
   z-index: 9999;
+  display: block;
 }
 
 .menu__level:focus {
@@ -34,7 +35,7 @@
 }
 
 .menu__level--current {
-  visibility:visible;
+  /* visibility:visible; */
 }
 
 .menu__item {
