--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -5,29 +5,28 @@
 }
 
 .menu__wrap {
-  position: relative;
+  position:absolute;
   top:5em;
   bottom:0;
-  /* overflow:hidden; */
+  overflow:hidden;
   width:100%;
-  height: 100vh;
 }
 
 .menu__level {
-  position: relative;
+  position:absolute;
   top:0;
   left:0;
-  /* visibility:hidden; */
+  visibility:hidden;
+  -webkit-visibility:hidden;
+  opacity:0;
   overflow:hidden;
   overflow-y:scroll;
   width:calc(100% + 50px);
-  height: 100vh;
+  height:100%;
   margin:0;
   padding:0;
   list-style-type:none;
   padding-bottom: 20px;
-  z-index: 9999;
-  display: block;
 }
 
 .menu__level:focus {
@@ -35,7 +34,9 @@
 }
 
 .menu__level--current {
-  /* visibility:visible; */
+  visibility:visible;
+  -webkit-visibility:visible;
+  opacity:1;
 }
 
 .menu__item {
@@ -279,8 +280,8 @@
 .menu {
   z-index:1000;
   top:0;
-  width:340px;
-  height:100%;
+  width:320px;
+  height:100vh;
   -webkit-transform:translate3d(100%, 0, 0);
   transform:translate3d(100%, 0, 0);
   -webkit-transition:-webkit-transform 0.3s;
