--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -18,6 +18,7 @@
   left:0;
   visibility:hidden;
   -webkit-visibility:hidden;
+  -webkit-backface-visibility:hidden;
   opacity:0;
   overflow:hidden;
   overflow-y:scroll;
@@ -36,6 +37,7 @@
 .menu__level--current {
   visibility:visible;
   -webkit-visibility:visible;
+  -webkit-backface-visibility:visible;
   opacity:1;
 }
 
