--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -5,22 +5,23 @@
 }
 
 .menu__wrap {
-  position:absolute;
+  position: relative;
   top:5em;
   bottom:0;
   overflow:hidden;
   width:100%;
+  height: 100vh;
 }
 
 .menu__level {
-  position:absolute;
+  position: relative;
   top:0;
   left:0;
   opacity:0;
   overflow:hidden;
   overflow-y:scroll;
   width:calc(100% + 50px);
-  height:100%;
+  height: 100vh;
   margin:0;
   padding:0;
   list-style-type:none;
