--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -8,7 +8,7 @@
   position: relative;
   top:5em;
   bottom:0;
-  overflow:hidden;
+  /* overflow:hidden; */
   width:100%;
   height: 100vh;
 }
@@ -18,7 +18,7 @@
   top:0;
   left:0;
   opacity:0;
-  overflow:hidden;
+  /* overflow:hidden; */
   overflow-y:scroll;
   width:calc(100% + 50px);
   height: 100vh;
