--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -18,7 +18,7 @@
   top:0;
   left:0;
   visibility:hidden;
-  overflow:hidden;
+  /*overflow:hidden;*/
   overflow-y:scroll;
   width:calc(100% + 50px);
   height: 100vh;
