--- a/views/includes/_header.html
+++ b/views/includes/_header.html
@@ -4,92 +4,92 @@
       <div class="row">
         <div class="col-sm-6 col-3"><a href="/"><img class="img-responsive d-none d-md-block" src="/img/logo.png"><img class="d-block d-md-none" src="/img/logo-small.png"></a></div>
         <div class="col-sm-6 col-9">
-          <h4 class="action action--open hvr-ripple-out" aria-label="Open Menu"><img src="/img/menu-button.svg" width="30px"></h4>
-          <div id="ml-menu" class="menu  menu--open">
-            <span class="action action--close" aria-label="Close Menu"><i class="fa fa-close"></i></span>
+          <h4 class="action action-open hvr-ripple-out" aria-label="Open Menu"><img src="/img/menu-button.svg" width="30px"></h4>
+          <div id="ml-menu" class="menu  menu-open">
+            <span class="action action-close" aria-label="Close Menu"><i class="fa fa-close"></i></span>
             <!-- <h3>TEST</h3> -->
-            <div class="menu__wrap">
-              <ul class="list-unstyled menu__level" data-menu="main" tabindex="-1" role="menu" aria-label="All">
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Home</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">About Us</a></li>
-                <li class="menu__item" role="menuitem"><a href="#" class="menu__link" data-submenu="submenu-1" aria-owns="submenu-1">Wars</a></li>
-                <li class="menu__item" role="menuitem"><a href="#" class="menu__link" data-submenu="submenu-2" aria-owns="submenu-2">Themes</a></li>
-                <li class="menu__item" role="menuitem"><a href="#" class="menu__link" data-submenu="submenu-3" aria-owns="submenu-3">Interactives</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Education</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Schools Orders & Information</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">ANZAC Day Services</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Poetry</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Just Soldiers</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Speeches</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Annual ANZAC Day Ceremonies</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">The Spirit of ANZAC</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Current Catalogue</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Photo Gallery</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="/download-tips">Download Tips</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Copying of Images</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Latest News</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Shop</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Contact Us</a></li>
+            <div class="menu-wrap">
+              <ul class="list-unstyled menu-level" data-menu="main" tabindex="-1" role="menu" aria-label="All">
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Home</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">About Us</a></li>
+                <li class="menu-item" role="menuitem"><a href="#" class="menu-link" data-submenu="submenu-1" aria-owns="submenu-1">Wars</a></li>
+                <li class="menu-item" role="menuitem"><a href="#" class="menu-link" data-submenu="submenu-2" aria-owns="submenu-2">Themes</a></li>
+                <li class="menu-item" role="menuitem"><a href="#" class="menu-link" data-submenu="submenu-3" aria-owns="submenu-3">Interactives</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Education</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Schools Orders & Information</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">ANZAC Day Services</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Poetry</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Just Soldiers</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Speeches</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Annual ANZAC Day Ceremonies</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">The Spirit of ANZAC</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Current Catalogue</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Photo Gallery</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="/download-tips">Download Tips</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Copying of Images</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Latest News</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Shop</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" href="#">Contact Us</a></li>
               </ul>
 
               <!-- Submenu 1 -->
-              <ul class="list-unstyled menu__level" id="submenu-1" data-menu="submenu-1" tabindex="-1" role="menu" aria-label="Wars">
-                <li class="menu__item ecps legends" role="menuitem"><a href="#" class="menu__link">1899-1902 BOER WAR</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1-1" aria-owns="submenu-1-1" href="#">1914-1918 WORLD WAR 1</a></li>
-                <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1-2" aria-owns="submenu-1-2" href="#">1939-1945 WORD WAR 2</a></li>
+              <ul class="list-unstyled menu-level" id="submenu-1" data-menu="submenu-1" tabindex="-1" role="menu" aria-label="Wars">
+                <li class="menu-item ecps legends" role="menuitem"><a href="#" class="menu-link">1899-1902 BOER WAR</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" data-submenu="submenu-1-1" aria-owns="submenu-1-1" href="#">1914-1918 WORLD WAR 1</a></li>
+                <li class="menu-item" role="menuitem"><a class="menu-link" data-submenu="submenu-1-2" aria-owns="submenu-1-2" href="#">1939-1945 WORD WAR 2</a></li>
                 
               </ul>
               <!-- Submenu 1-1 -->
-              <ul data-menu="submenu-1-1" id="submenu-1-1" class="menu__level" tabindex="-1" role="menu" aria-label="1914-1918 WORLD WAR 1">
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="#">WW1-General</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="#">WW1-Gallipoli</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="#">WW1-Western Front</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="#">WW1-Middle East</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="#">WW1-Home Front</a></li>
+              <ul data-menu="submenu-1-1" id="submenu-1-1" class="menu-level" tabindex="-1" role="menu" aria-label="1914-1918 WORLD WAR 1">
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="#">WW1-General</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="#">WW1-Gallipoli</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="#">WW1-Western Front</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="#">WW1-Middle East</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="#">WW1-Home Front</a></li>
               </ul>
               <!-- Submenu 1-2 -->
-              <ul data-menu="submenu-1-2" id="submenu-1-2" class="menu__level" tabindex="-1" role="menu" aria-label="1939-1945 WORD WAR 2">
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/ww2-general">WW2-General</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/ww2-europe-middle-east">WW2-Europe/Middle East</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/ww2-asia-pacific">WW2-Asia/Pacific</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/ww2-prisoner-of-war">WW2-Prisoner of War</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/ww2-home-front">WW2-Home Front</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1945-49-bcof-british-commonwealth-occupation-force-japan">1945-49 BCOF (British Commonwealth Occupation Force - Japan)</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1950-1953-korea">1950-1953 Korea</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1950-1960-malayan-emergency">1950-1960 Malayan Emergency</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1964-1966-indonesia">1964-1966 Indonesia</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1962-1972-vietnam">1962-1972 Vietnam</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1990-1991-gulf">1990-1991 Gulf</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/2003-2006-iraq-2003">2003-2006 Iraq 2003</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1947-2006-peacekeeping-general">1947-2006 Peacekeeping - General</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/1999-2000-peacekeeping-east-timor">1999-2000 Peacekeeping - East Timor</a></li>
+              <ul data-menu="submenu-1-2" id="submenu-1-2" class="menu-level" tabindex="-1" role="menu" aria-label="1939-1945 WORD WAR 2">
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/ww2-general">WW2-General</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/ww2-europe-middle-east">WW2-Europe/Middle East</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/ww2-asia-pacific">WW2-Asia/Pacific</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/ww2-prisoner-of-war">WW2-Prisoner of War</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/ww2-home-front">WW2-Home Front</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1945-49-bcof-british-commonwealth-occupation-force-japan">1945-49 BCOF (British Commonwealth Occupation Force - Japan)</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1950-1953-korea">1950-1953 Korea</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1950-1960-malayan-emergency">1950-1960 Malayan Emergency</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1964-1966-indonesia">1964-1966 Indonesia</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1962-1972-vietnam">1962-1972 Vietnam</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1990-1991-gulf">1990-1991 Gulf</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/2003-2006-iraq-2003">2003-2006 Iraq 2003</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1947-2006-peacekeeping-general">1947-2006 Peacekeeping - General</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/1999-2000-peacekeeping-east-timor">1999-2000 Peacekeeping - East Timor</a></li>
                 </ul>
               <!-- Submenu 2 -->
-              <ul class="list-unstyled menu__level" id="submenu-2" data-menu="submenu-2" tabindex="-1" role="menu" aria-label="Themes">
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/commemoration">Commemoration</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/heroes">Heroes</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/anzac-day">Anzac Day</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/women">Women</a></li>
-                <li class="menu__item ps legends" role="menuitem"><a class="menu__link" href="/community">Community</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/victoria-cross">Victoria Cross</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/family">Family</a></li>
-                <li class="menu__item ps legends" role="menuitem"><a class="menu__link" href="/memorials">Memorials</a></li>
+              <ul class="list-unstyled menu-level" id="submenu-2" data-menu="submenu-2" tabindex="-1" role="menu" aria-label="Themes">
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/commemoration">Commemoration</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/heroes">Heroes</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/anzac-day">Anzac Day</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/women">Women</a></li>
+                <li class="menu-item ps legends" role="menuitem"><a class="menu-link" href="/community">Community</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/victoria-cross">Victoria Cross</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/family">Family</a></li>
+                <li class="menu-item ps legends" role="menuitem"><a class="menu-link" href="/memorials">Memorials</a></li>
               </ul>
               <!-- Submenu 3 -->
-              <ul class="list-unstyled menu__level" id="submenu-2" data-menu="submenu-3" tabindex="-1" role="menu" aria-label="Interactives">
-                <li class="menu__item ps legends" role="menuitem"><a class="menu__link" href="/last-voyage-of-ae2">Last Voyage of AE2</a></li>
-                <li class="menu__item ps legends" role="menuitem"><a class="menu__link" href="/charge-at-beersheba">Charge at Beersheba</a></li>
-                <li class="menu__item ps legends" role="menuitem"><a class="menu__link" href="/smithy-interactive">Smithy Interactive</a></li>
-                <li class="menu__item p legends" role="menuitem"><a class="menu__link" href="/who-am-i">Who Am I?</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/battle-casualties">Battle Casualties</a></li>
-                <li class="menu__item ecps legends" role="menuitem"><a class="menu__link" href="/infantryman">Infantryman</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/where-in-the-world">Where in the World?</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/checking-your-gear">Checking Your Gear</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/suitcase-treasure">Suitcase Treasure</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/anzac-puzzles">ANZAC Puzzles</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/uniforms-over-time">Uniforms Over Time</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/flying-the-flag">Flying the Flag</a></li>
-                <li class="menu__item ecp legends" role="menuitem"><a class="menu__link" href="/women-in-war">Women in War</a></li>
+              <ul class="list-unstyled menu-level" id="submenu-2" data-menu="submenu-3" tabindex="-1" role="menu" aria-label="Interactives">
+                <li class="menu-item ps legends" role="menuitem"><a class="menu-link" href="/last-voyage-of-ae2">Last Voyage of AE2</a></li>
+                <li class="menu-item ps legends" role="menuitem"><a class="menu-link" href="/charge-at-beersheba">Charge at Beersheba</a></li>
+                <li class="menu-item ps legends" role="menuitem"><a class="menu-link" href="/smithy-interactive">Smithy Interactive</a></li>
+                <li class="menu-item p legends" role="menuitem"><a class="menu-link" href="/who-am-i">Who Am I?</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/battle-casualties">Battle Casualties</a></li>
+                <li class="menu-item ecps legends" role="menuitem"><a class="menu-link" href="/infantryman">Infantryman</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/where-in-the-world">Where in the World?</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/checking-your-gear">Checking Your Gear</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/suitcase-treasure">Suitcase Treasure</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/anzac-puzzles">ANZAC Puzzles</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/uniforms-over-time">Uniforms Over Time</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/flying-the-flag">Flying the Flag</a></li>
+                <li class="menu-item ecp legends" role="menuitem"><a class="menu-link" href="/women-in-war">Women in War</a></li>
               </ul>
 
             </div>
