--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -8,7 +8,7 @@
   position: absolute;
   top:5em;
   bottom:0;
-  /* overflow:hidden; */
+  overflow:hidden;
   width:100%;
   height: 100vh;
 }
@@ -17,8 +17,8 @@
   position: absolute;
   top:0;
   left:0;
-  visibility:hidden;
-  /*overflow:hidden;*/
+  display:none;
+  overflow:hidden;
   overflow-y:scroll;
   width:calc(100% + 50px);
   height: 100vh;
@@ -33,12 +33,13 @@
 }
 
 .menu-level.menu-level-current {
- visibility:visible !important;
+ display:block;
 }
 
 .menu-item {
   display:block;
   width:calc(100% - 50px);
+  width:90%;
 }
 
 .menu-link {
