--- a/views/includes/_footer.html
+++ b/views/includes/_footer.html
@@ -5,7 +5,7 @@
         <div class="intro mb-4">
           <h4 class="mt-0">ANZAC Day&nbsp;</h4>
         </div>
-        <ul class="list-unstyled bottom-menu d-flex align-items-start flex-wrap">
+        <ul class="list-unstyled bottom-menu d-flex align-items-start flex-wrap flex-column flex-sm-row">
           <li><a href="/">Home</a></li>
           <li><a href="/about-us">About Us</a></li>
           <li><a href="/history">History</a></li>
