--- a/views/includes/_header.html
+++ b/views/includes/_header.html
@@ -8,7 +8,13 @@
             <h2 class="float-right nav_handle mb-0 hvr-ripple-out"><img src="/img/menu-button.svg"></h2>
             </div>
             <div class="float-right navigation" data-navigation-handle=".nav_handle" data-navigation-content=".nav_content">
-                <ul class="list-unstyled d-flex main-nav mb-0 mt-5">
+                <ul class="list-unstyled classification">
+                  <li><h5 class="mt-0 font-weight-light">Legend:</h5></li>
+                  <li class="d-flex align-items-center"><img src="/img/ec.jpg"><span>Early Childhood</span></li>
+                  <li class="d-flex align-items-center"><img src="/img/primary.jpg"><span>Primary</span></li>
+                  <li class="d-flex align-items-center"><img src="/img/secondary.jpg"><span>Secondary</span></li>
+                </ul>
+                <ul class="list-unstyled d-flex main-nav mb-0 mt-4">
                   <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
                   <li class="menu-item"><a class="menu-link" href="#">About Us</a></li>
                   <li class="menu-item dropdown">
