--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -143,6 +143,27 @@ section {
 .section {
   padding: 60px 0;
 }
+.sticky-wrapper {
+  transform: unset !important;
+}
+
+.is-sticky {
+  z-index: 1;
+}
+
+.menu {
+  background-color: #ffffff;
+  padding: 1rem 0;
+  transition: 500ms ease-in-out;
+}
+.is-sticky .menu {
+  padding: 0.3rem 0;
+}
+.is-sticky .menu {
+  z-index: 1;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+}
 
 @media (max-width:1024px) {
   h1 {
