--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,7 +11,7 @@
   left:0;
   width:45%;
   height:100%;
-  background:#eee url(https://anzacday.sites.webriqs.com/img/war-identity-bg.jpg) no-repeat center center;
+  background:#eee url(https://res.cloudinary.com/db6xmqefe/image/upload/v1539753076/war-identity-bg.jpg) no-repeat center center;
   background-size:cover;
 }
 
